alignment issue and leadtime fixed

--- a/UI/src/app/component/grouped-column-plus-line-chart/grouped-column-plus-line-chart.component.css
+++ b/UI/src/app/component/grouped-column-plus-line-chart/grouped-column-plus-line-chart.component.css
@@ -76,6 +76,7 @@
   box-shadow: 0px 0px 6px #b9b9bb;
   opacity: 0.5;
   pointer-events: none;
+  width: max-content;
 }
 
 :host ::ng-deep.tooltip-container{
