--- a/UI/src/app/component/table/table.component.css
+++ b/UI/src/app/component/table/table.component.css
@@ -40,7 +40,7 @@
 }
 
 :host::ng-deep tr td:first-child span{
-    position: relative;
+    /* position: relative; */
     margin-left: 20px;
     right: -22%;
 }
